--- a/grid/css/style.css
+++ b/grid/css/style.css
@@ -8,46 +8,22 @@ body{
     text-align: center;
 }
 
-/* Main Grid */
+/* Grid Styling */
 
-#parent-main{
+#parent-section-2, #parent-section-3{
+    width: 100%;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr 3fr;
-    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
     align-items: center;
     justify-content: space-around;
-}
-
-/* Second Section Grid */
-
-#parent-section-2{
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 2fr 2fr 1fr;
-    align-items: end;
-    justify-content: space-evenly;
-}
-
-#child-1-section-2{
-    grid-column: 2;
-}
-
-/* Third Section Grid */
-
-#parent-section-3{
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
-    align-items: center;
-    justify-content: space-around;
 }
 
 /*image Styling */
 
 #child-2-section-2 img{
-    width: 400px;
+    width: 300px;
     height: auto;
 }
 
@@ -62,29 +38,48 @@ header{
     background-color: rgb(27, 25, 25);
     color: white;
     width: 100%;
-    height: 100%;
+    height: 150px;
     font-size: 1.6em;
     margin-bottom: 10px;
+    display: grid;
+    justify-content: center;
 }
 
 #child-1-section-2, #child-2-section-2, .child-section-3{
-    margin: 15px;
-    margin-bottom: 0;
-    padding: 20px;
+    margin: 10px;
     font-size: 0.8em;
+    max-width: 400px;
 }
 
 #child-1-section-2{
-    max-width: 350px;
+    display: grid;
+    justify-content: center;
 }
 
-#child-1-section-2 h2{
-    line-height: 0;
+#child-1-section-2 p{
+    max-width: 350px;
 }
 
 .child-section-3{
     line-height: 2;
     color: grey;
     max-width: 250px;
-    margin-top: 0;
+    margin-top: 15px;
+}
+
+/*responsiveness */
+
+@media only screen and (min-width: 800px){
+    #child-1-section-2{
+        justify-self: end;
+    }
+    
+    #child-2-section-2{
+        justify-self: start;
+    }
+
+    #child-2-section-2 img{
+        width: 400px;
+        height: auto;
+    }
 }
