--- a/grid/css/style.css
+++ b/grid/css/style.css
@@ -6,6 +6,7 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    box-sizing: margin-box;
 }
 
 /* Grid Styling */
@@ -13,7 +14,7 @@ body{
 #parent-section-2, #parent-section-3{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 1.5rem;
     align-items: center;
     justify-content: space-around;
